samples/_failures_safe/1761445782_c3f6bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e16b12e5.c: In function ‘main’:
./samples/SAFE/__tmp_e16b12e5.c:137:12: error: missing terminating " character
  137 |     printf("Enter choice
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e16b12e5.c:137:5: error: expected expression at end of input
  137 |     printf("Enter choice
      |     ^~~~~~
./samples/SAFE/__tmp_e16b12e5.c:137:5: error: expected declaration or statement at end of input
